--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,8 +1,24 @@
 body {
-  padding: 50px;
+  padding: 0;
+  margin: 0;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
 }
 
 a {
   color: #00B7FF;
 }
+
+.full-width {width:100%; padding:10px;}
+canvas {min-height:500px; background-image:url('../images/background.jpg'); background-repeat:repeat-x;}
+h3 {font-size:1.5em; color:#c5c5c5; text-align:center; padding:5px;}
+.bl {color:black; padding:0; margin:0; width:1em;}
+.gray {color:gray; padding:0; margin:0; width:1em;}
+.relative {position:relative; top:-500px; font-size:2em;}
+.spacer {width:1.5em; margin-left:1em;}
+.block {background: #f5f5f5; color:black; width:150px;}
+.block tr {text-align:center; padding:10px;}
+
+#correct {color:green;}
+#errors {color:red;}
+#typeString {font-size:24px; text-align:center; color:blue; padding:10px;}
+#typeString::first-letter {background:rgb(200,200,200);}
