--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title><%= title %></title>
-    <link rel="shortcut icon" href="../../rac_face.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="/images/rac_face.ico" type="image/x-icon" />
     <link rel='stylesheet' href='/stylesheets/style.css' />
   </head>
   <body>
