Added end of game features

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -31,7 +31,6 @@
     	<span class="gray">g</span>
     </h3>
     <div id="gameStart">Start</div>
-    <div id="gameEnd"></div>
     <canvas id="gameCanvas" class="full-width" width="1200" height="550">Canvas not working</canvas>
     <div id="typeString"></div>
     <table class="block relative">
@@ -47,10 +46,10 @@
     </table>
 
     <div id="gameEnd">
-    	<span class="epic">Well done!!</span>
+    	<span class="epic" id="gameEndTitle">Well done!!</span>
     	<br />
     	Here are your results:
-    	<table class="block relative">
+    	<table id="gameEndTable">
     		<tr>
     			<td>WPM: </td><td id="wpm_result">0</td>
     		</tr>
