--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -17,6 +17,7 @@ h3 {font-size:1.5em; color:#c5c5c5; text-align:center; padding:5px;}
 .spacer {width:1.5em; margin-left:1em;}
 .block {background: #f5f5f5; color:black; width:150px;}
 .block tr {text-align:center; padding:10px;}
+.epic {font-size:3em;}
 
 #correct {color:green;}
 #errors {color:red;}
@@ -24,4 +25,5 @@ h3 {font-size:1.5em; color:#c5c5c5; text-align:center; padding:5px;}
 #typeString::first-letter {background:rgb(0,0,0); color:white; padding:2px;}
 #gameStart, #gameEnd {position:absolute; top:300px; left:50%; z-index:500; text-align:center; background:white; border-radius:20px; }
 #gameStart {border:10px solid red; color:red; font-size:2.5em;  margin-left:-50px; width:100px; cursor:pointer;}
-#gameEnd {display:none; border:10px solid green; color:green; background:white; font-size:2em; margin-left:-100px; width:200px;}
+#gameEnd {border:10px solid green; color:green; background:white; font-size:2em; top: 150px; margin-left:-150px; width:300px; visibility:hidden;}
+#gameEnd table {width:100%;}
